# ChangeLog for mail-filter/dcc
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/ChangeLog,v 1.25 2006/03/10 03:16:35 agriffis Exp $

  10 Mar 2006; Aron Griffis <agriffis@gentoo.org> dcc-1.3.24.ebuild:
  Mark 1.3.24 ~ia64

  06 Feb 2006; Aron Griffis <agriffis@gentoo.org> dcc-1.3.16.ebuild:
  Mark 1.3.16 stable on alpha

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> dcc-1.3.24.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.

*dcc-1.3.24 (12 Dec 2005)

  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> +dcc-1.3.24.ebuild:
  Bug #111370 - version bump.

  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> dcc-1.3.16.ebuild:
  Bug #107028, change SRC_URI to avoid upsteams 301 redirect.

  04 Dec 2005; Tom Gall <tgall@gentoo.org> dcc-1.3.16.ebuild:
  stable on ppc64

  12 Nov 2005; Brent Baude <ranger@gentoo.org> dcc-1.3.16.ebuild:
  Marking dcc-1.3.16 ~ppc64 for bug# 112220

  11 Nov 2005; <mcummings@gentoo.org> dcc-1.3.16.ebuild:
  Tested and keyworded for ~sparc. Also allows dcc use flag in new
  spamassassin for sparc.

  16 Sep 2005; Simon Stelling <blubb@gentoo.org> dcc-1.3.16.ebuild:
  stable on amd64 wrt 105217

  12 Sep 2005; Andrej Kacian <ticho@gentoo.org> dcc-1.2.28.ebuild,
  dcc-1.2.28-r1.ebuild, dcc-1.2.74.ebuild, dcc-1.3.16.ebuild:
  Do not use ${HOMEPAGE} in SRC_URI.

  11 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> dcc-1.3.16.ebuild:
  Stable on ppc.

*dcc-1.3.16 (10 Sep 2005)

  10 Sep 2005; Tom Knight <tomk@gentoo.org> +dcc-1.3.16.ebuild:
  Version bumped to 1.3.6, fixes security vulnerability, bug #105217

*dcc-1.2.74 (21 Mar 2005)

  21 Mar 2005; Scott W Taylor <swtaylor@gentoo.org> dcc-1.2.28-r1.ebuild,
  +dcc-1.2.74.ebuild:
  bump

  17 Mar 2005; Seemant Kulleen <seemant@gentoo.org> dcc-1.2.28.ebuild,
  dcc-1.2.28-r1.ebuild:
  Dependency update: net-www/fetch -> www-client/fetch.
