@@ -1,46 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 a7f27975f030e5328a5f9da159764242 ChangeLog 3197
-RMD160 fcc2fe8f7fc13dc89754cc1cbdbc46ef36519a6e ChangeLog 3197
-SHA256 cc8324c0f2ead3674867b00cb7d5df2611baa94ccdc30ca733468238bdead232 ChangeLog 3197
+MD5 df4b1e10d19f7d8af4e2bd5f37fb926c ChangeLog 3310
 MD5 9820a1516eab5f987d0acc4937109f37 dcc-1.2.28-r1.ebuild 3468
-RMD160 e958315b9654cf7e5d7619950081ef476e1e8f8d dcc-1.2.28-r1.ebuild 3468
-SHA256 507ca243301c205015ca63876c80756e090c443756eaf12d3695040a35de90de dcc-1.2.28-r1.ebuild 3468
 MD5 088846b45a9f76ff360b59e162aa691b dcc-1.2.28.ebuild 3142
-RMD160 28ddd3eca40715e37096c23a2d53c45d81f62083 dcc-1.2.28.ebuild 3142
-SHA256 f43cb4990f0c671ae8aa4e2f1abb61e62f13224b7ccdb08feb16db636694085e dcc-1.2.28.ebuild 3142
 MD5 44316ec77134d08f57f6b7092d506758 dcc-1.2.74.ebuild 3558
-RMD160 76a9c011b18f941a8c5a6bd8b471bfd50965fa65 dcc-1.2.74.ebuild 3558
-SHA256 83c5442dd7e884c87ea085a9d7075b230a8b6586cafbc345d6d3559037589e8e dcc-1.2.74.ebuild 3558
-MD5 2ac7e1e8c9df7d0323f4d5a8e2165a28 dcc-1.3.16.ebuild 3540
-RMD160 68b17af4b6627350fbb7bcd1aed84e34f2c20532 dcc-1.3.16.ebuild 3540
-SHA256 22ade508d486c4eabf2b226a9bd88cadab1f380ab8ccff2e5cb8be4852d7a677 dcc-1.3.16.ebuild 3540
-MD5 0b9a7d17924ff4572081488e69399d67 dcc-1.3.24.ebuild 3636
-RMD160 1113d4f51ea6a8bae121188a108f4cbfa00cb149 dcc-1.3.24.ebuild 3636
-SHA256 b8752911e7dedf90ffe80a8123992cfd9a67b4a1dfeedfea16ca4111f9f4be48 dcc-1.3.24.ebuild 3636
+MD5 75ab14e5347b8297758ab9fcdbf4419f dcc-1.3.16.ebuild 3546
+MD5 781d9cb53a407d6078fa09dfac23b08d dcc-1.3.24.ebuild 3642
 MD5 f4024b299ddf4d0921ef9dc6cce1b0c3 files/digest-dcc-1.2.28 67
-RMD160 5c04163e71870bfd08291466ffce46aaee31269e files/digest-dcc-1.2.28 67
-SHA256 1237d991925a80fd6ee9f07d2b18a059f08b9af3fcebb937decd2c5b23eacd36 files/digest-dcc-1.2.28 67
 MD5 f4024b299ddf4d0921ef9dc6cce1b0c3 files/digest-dcc-1.2.28-r1 67
-RMD160 5c04163e71870bfd08291466ffce46aaee31269e files/digest-dcc-1.2.28-r1 67
-SHA256 1237d991925a80fd6ee9f07d2b18a059f08b9af3fcebb937decd2c5b23eacd36 files/digest-dcc-1.2.28-r1 67
 MD5 1e48ac518bb2e13c6194d45732e6efa5 files/digest-dcc-1.2.74 67
-RMD160 13f15cefc8b4da6218bad75db6a1c40264b1d229 files/digest-dcc-1.2.74 67
-SHA256 81e22c21173bb4bb962fe3ca79153a8e5338e06f6676d5d7b83da779f9aa0149 files/digest-dcc-1.2.74 67
 MD5 fb9e3179011fd75dc427787fbcd6a028 files/digest-dcc-1.3.16 67
-RMD160 ef82e9b49e3dd84888cdb2de7fd0e00f65022853 files/digest-dcc-1.3.16 67
-SHA256 08bedcf7846ea76c89f61b1aea51783cdb0cf7c976e1d84ad87094006d46cb82 files/digest-dcc-1.3.16 67
 MD5 fff69962c33a1f171df123bd9953845d files/digest-dcc-1.3.24 67
-RMD160 cd88db48cd0238b87c9f6020c12bfa3dad2d4fdb files/digest-dcc-1.3.24 67
-SHA256 30b2814698ba466a8ed8d27af4546ba6e453a6d78dcc9cf284f8936abd7c2268 files/digest-dcc-1.3.24 67
 MD5 5e658b705b2985d36d82b2a5d218ec78 metadata.xml 224
-RMD160 7a7b22292aa2fdfd4c9e3f9abe62aff83170f428 metadata.xml 224
-SHA256 d67b611ce73649753af8a136a53c5dfae6628c053d01687779f108753fd20929 metadata.xml 224
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.1 (GNU/Linux)
+Version: GnuPG v1.4.2.1-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFEEO+dJrHF4yAQTrARAq2vAJ0WIY2uQE2jq21oQ4bGGSP0ZAEraQCeKg9R
-ev9/W5t0Y2Zgh63x7t9Id+4=
-=A4S8
+iD8DBQFEFhpfKRy60XGEcJIRAoTqAKCgwRwIObfhPZyigrW9T49Lg4SSFgCcC2Q9
+cREvUFMyWnFP8x1JLz/rGp8=
+=dPKi
 -----END PGP SIGNATURE-----
