@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/Attic/dcc-1.3.24.ebuild,v 1.4 2006/03/10 03:16:35 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/Attic/dcc-1.3.24.ebuild,v 1.5 2006/03/14 01:20:12 gustavoz Exp $
 
 inherit flag-o-matic
 
@@ -11,7 +11,7 @@ SRC_URI="http://www.rhyolite.com/anti-spam/dcc/source/${MY_P}.tar.Z"
 
 LICENSE="DCC"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="ipv6"
 
 RDEPEND="dev-lang/perl
