@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/dcc
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/ChangeLog,v 1.25 2006/03/10 03:16:35 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/ChangeLog,v 1.26 2006/03/14 01:20:10 gustavoz Exp $
+
+  14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> dcc-1.3.16.ebuild,
+  dcc-1.3.24.ebuild:
+  Keyworded ~hppa
 
   10 Mar 2006; Aron Griffis <agriffis@gentoo.org> dcc-1.3.24.ebuild:
   Mark 1.3.24 ~ia64
